--- a/vault/templates/_containerVault.yaml
+++ b/vault/templates/_containerVault.yaml
@@ -31,28 +31,31 @@ Create helm partial for Vault container
     readOnly: true
   {{- end }}
   env:
-  - name: MY_POD_NAME
-    valueFrom:
-      fieldRef:
-        fieldPath: metadata.name
-  - name: SCRIPT
-    value: &startVault |-
-      #!/bin/busybox sh
+    - name: MY_POD_NAME
+      valueFrom:
+        fieldRef:
+          fieldPath: metadata.name
+    - name: SCHEME
+      value: "{{- if .Values.vault.enableTLS }}https{{- else }}http{{- end }}"
+    - name: ADDR
+      value: "${MY_POD_NAME}.{{ template "vault.fullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}"
+    - name: PORT
+      value: "{{- if .Values.vault.enableTLS }}443{{- else }}80{{- end}}"
+    - name: VAULT_API_ADDR
+      value: "$SCHEME://$ADDR:$PORT"
+    - name: VAULT_CLUSTER_ADDR
+      value: "$ADDR:{{ .Values.vault.clusterListenerPort }}"
+    - name: SCRIPT
+      value: &startVault |-
+        #!/bin/busybox sh
 
-      scheme="{{- if .Values.vault.enableTLS }}https{{- else }}http{{- end }}"
-      addr="${MY_POD_NAME}.{{ template "vault.fullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}"
-      port={{- if .Values.vault.enableTLS }}443{{- else }}80{{- end}}
+        # print current environment
+        printenv
 
-      export VAULT_API_ADDR="$scheme://$addr:$port"
-      export VAULT_CLUSTER_ADDR="$addr:{{ .Values.vault.clusterListenerPort }}"
+        cat /etc/vault/cfg/config.hcl
 
-      # print current environment
-      printenv
-
-      cat /etc/vault/cfg/config.hcl
-
-      # start vault server
-      vault server -config=/etc/vault/cfg/config.hcl{{- if .Values.vault.enableDebug }} -log-level=debug{{- end }}
+        # start vault server
+        vault server -config=/etc/vault/cfg/config.hcl{{- if .Values.vault.enableDebug }} -log-level=debug{{- end }}
   resources:
     limits:
       cpu: {{ .Values.vault.cpu }}
