Fix tls to etcd (#70)
* Fixing deployment error from statefulset deployment where names etcdTls and vaultTls do not conform to dns1123 standards where the string must be lowercase.

* Testing change to partial for environment variables. Apparently in an anchored script, variables are not properly interpolated. Trying out using k8s env variables.

* yamllint dies on the colons in the env defs. Escaped them and trying again.

* yamllint dies on the colons in the env defs still. This fixes it finally.

* Previous test failed. You cannot use shell variables in k8s env definitions as they are not transliterated but end up as literatls, unfortunately. So trying a different route.

--- a/vault/templates/_containerVault.yaml
+++ b/vault/templates/_containerVault.yaml
@@ -39,18 +39,22 @@ Create helm partial for Vault container
       value: "{{- if .Values.vault.enableTLS }}https{{- else }}http{{- end }}"
     - name: ADDR
       value: "${MY_POD_NAME}.{{ template "vault.fullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}"
-    - name: PORT
+    - name: CLIENT_LISTENER_PORT
       value: "{{- if .Values.vault.enableTLS }}443{{- else }}80{{- end}}"
-    - name: VAULT_API_ADDR
-      value: "$SCHEME://$ADDR:$PORT"
-    - name: VAULT_CLUSTER_ADDR
-      value: "$ADDR:{{ .Values.vault.clusterListenerPort }}"
+    - name: CLUSTER_LISTENER_PORT
+      value: "{{ .Values.vault.clusterListenerPort }}"
     - name: SCRIPT
       value: &startVault |-
         #!/bin/busybox sh
 
         # print current environment
         printenv
+
+        VAULT_API_ADDR="$SCHEME://$ADDR:$CLIENT_LISTENER_PORT"
+        VAULT_CLUSTER_ADDR="$ADDR:$CLUSTER_LISTENER_PORT"
+        TEST="this is a test"
+
+        export VAULT_API_ADDR VAULT_CLUSTER_ADDR TEST
 
         cat /etc/vault/cfg/config.hcl
 
@@ -63,6 +67,6 @@ Create helm partial for Vault container
     requests:
       cpu: {{ .Values.vault.cpu }}
       memory: {{ .Values.vault.memory }}
-  command: [ "bin/sh" ]
+  command: [ "/bin/sh" ]
   args: ["-c", *startVault]
 {{- end }}
