Fix tls to etcd (#72)
* Fixing deployment error from statefulset deployment where names etcdTls and vaultTls do not conform to dns1123 standards where the string must be lowercase.

* Testing change to partial for environment variables. Apparently in an anchored script, variables are not properly interpolated. Trying out using k8s env variables.

* yamllint dies on the colons in the env defs. Escaped them and trying again.

* yamllint dies on the colons in the env defs still. This fixes it finally.

* Previous test failed. You cannot use shell variables in k8s env definitions as they are not transliterated but end up as literatls, unfortunately. So trying a different route.

* Missed one of the env vars in the template that needed to be moved back into the startup script.

* So it appears that using SCRIPT as an env var and running it as a script works great if you do not need env vars; otherwise, those env vars do not get set, which makes sense...you cannot create exported VARS from an exported VAR...there would be an inception problem there. So, creating a runtime script froma configmap now and testing.

--- a/vault/templates/_containerInitVault.yaml
+++ b/vault/templates/_containerInitVault.yaml
@@ -23,6 +23,6 @@ Create helm partial for Vault initialization
       # create secret out of the output.json
       kubectl delete secret {{ template "vault.fullname" . }}-keys --namespace {{ .Release.Namespace }} || true  
       kubectl create secret generic {{ template "vault.fullname" . }}-keys --from-file=./output.json --namespace {{ .Release.Namespace }}
-  command: [ "bin/sh" ]
+  command: [ "/bin/sh" ]
   args: ["-c", *initVault]
 {{- end }}
