--- a/vault/templates/_containerVault.yaml
+++ b/vault/templates/_containerVault.yaml
@@ -21,6 +21,10 @@ Create helm partial for Vault container
   - name: config
     mountPath: /etc/vault/cfg
     readOnly: true
+  - name: config
+    mountPath: /vault-bin/vault-start.sh
+    subPath: vault-start.sh
+    readOnly: false
   {{- if .Values.vault.tls.enabled }}
   - name: vault-tls
     mountPath: {{ .Values.vault.tls.secret.mountPath }}
@@ -41,24 +45,6 @@ Create helm partial for Vault container
       value: "{{- if .Values.vault.enableTLS }}443{{- else }}80{{- end}}"
     - name: CLUSTER_LISTENER_PORT
       value: "{{ .Values.vault.clusterListenerPort }}"
-    - name: SCRIPT
-      value: &startVault |-
-        #!/bin/busybox sh
-
-        # print current environment
-        printenv
-
-        ADDR="${MY_POD_NAME}.{{ template "vault.fullname" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}"
-        VAULT_API_ADDR="$SCHEME://$ADDR:$CLIENT_LISTENER_PORT"
-        VAULT_CLUSTER_ADDR="$ADDR:$CLUSTER_LISTENER_PORT"
-        TEST="this is a test"
-
-        export ADDR VAULT_API_ADDR VAULT_CLUSTER_ADDR TEST
-
-        cat /etc/vault/cfg/config.hcl
-
-        # start vault server
-        vault server -config=/etc/vault/cfg/config.hcl{{- if .Values.vault.enableDebug }} -log-level=debug{{- end }}
   resources:
     limits:
       cpu: {{ .Values.vault.cpu }}
@@ -67,5 +53,5 @@ Create helm partial for Vault container
       cpu: {{ .Values.vault.cpu }}
       memory: {{ .Values.vault.memory }}
   command: [ "/bin/sh" ]
-  args: ["-c", *startVault]
+  args: "/vault-bin/vault-start.sh"
 {{- end }}
