Fix tls to etcd (#75)
* Last attempt failed to deploy. Attempting to fix.

* Last attempt failed to deploy. Attempting to fix part deux.

* Making tls mount readonly

--- a/vault/templates/_containerVault.yaml
+++ b/vault/templates/_containerVault.yaml
@@ -28,6 +28,7 @@ Create helm partial for Vault container
   {{- if .Values.vault.tls.enabled }}
   - name: vault-tls
     mountPath: {{ .Values.vault.tls.secret.mountPath }}
+    readOnly: true
   {{- end }}
   {{- if .Values.vault.etcdBackend.tls.enabled }}
   - name: etcd-tls
