--- a/vault/templates/run-vault-configmap.yaml
+++ b/vault/templates/run-vault-configmap.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ template "vault.fullname" . }}-startscript
+  name: {{ template "vault.name" . }}-startscript
   labels:
-    app: {{ template "vault.name" . }}
+    app: {{ template "vault.name" . }}-startscript
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
