--- a/vault/values.yaml
+++ b/vault/values.yaml
@@ -6,6 +6,7 @@ vault:
   imagePullPolicy: "Always"
   component: "vault"
   nodePort:
+  nodePool: 
   listenerPort: 8200
   clusterListenerPort: 8201
 # Valid choices are [etcd, inmem]
