--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ variables:
   ROBOT_ACCOUNT: chartvaultrw
   HELM_REGISTRY_IMAGE: quay.io/samsung_cnct/helm-registry-agent
   HELM_REGISTRY_VERSION: v0.7.4-helm_2.6
+  KUBECTL_VERSION: v1.9.2
 
 stages:
   - build
@@ -15,6 +16,7 @@ stages:
   - publish
 
 before_script:
+  - helm init --client-only
   - helm registry login -u ${REGISTRY_USER}+${ROBOT_ACCOUNT} -p ${REGISTRY_PASSWORD} ${REGISTRY}
   - export PROJECT_NAME=${CHART_NAME}
   - export CHART_VER=$(git describe --tags --abbrev=0 2>/dev/null | sed 's/^v//')
@@ -36,8 +38,18 @@ helm_test:
   only:
     - tags
     - branches
+  variables:
+    ETCD_GIT_REPO: https://github.com/samsung-cnct/chart-vault-etcd.git
+    ETCD_GIT_FOLDER: etcd-repo
+    NAMESPACE: ${CHART_NAME}-test-${CI_PIPELINE_ID}
+    RELEASE: ${CHART_NAME}-${CI_PIPELINE_ID}
+    GEN_NAMESPACE: ${CHART_NAME}-test-${CI_PIPELINE_ID}
+    GEN_STATEFULSET_NAME: etcd-vault
+    GEN_STATEFULSET_NAME_VAULT: ${CHART_NAME}-${CI_PIPELINE_ID}
   script:
-    - build/test.sh
+    - test/test.sh
+  after_script:
+    - test/cleanup.sh
 
 helm_publish_alpha:
   stage: publish
