add readiness check. internally use a headless service that skips readiness checks, so that we can init properly

--- a/vault/templates/setupVault/_container.yaml
+++ b/vault/templates/setupVault/_container.yaml
@@ -55,7 +55,7 @@ Create helm partial for Vault initialization
           --header "X-Vault-Token: ${rootToken}" \
           --location \
           --request DELETE \
-          https://{{ template "vault.access" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/auth/{{ $key }} || true
+          https://{{ template "vault.name" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/auth/{{ $key }} || true
         healthCode=$(curl --connect-timeout 1 \
           -s -o /dev/null \
           -w %{http_code} \
@@ -68,7 +68,7 @@ Create helm partial for Vault initialization
           --location \
           --request POST \
           --data {{ . | toJson | quote }} \
-          https://{{ template "vault.access" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/auth/{{ $key }})
+          https://{{ template "vault.name" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/auth/{{ $key }})
         {{- else }}
         curl --connect-timeout 1 \
           -s -o /dev/null \
@@ -76,14 +76,14 @@ Create helm partial for Vault initialization
           --header "X-Vault-Token: ${rootToken}" \
           --location \
           --request DELETE \
-            http://{{ template "vault.access" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/auth/{{ $key }} || true
+            http://{{ template "vault.name" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/auth/{{ $key }} || true
         healthCode=$(curl --connect-timeout 1 \
           -s -o /dev/null \
           --header "X-Vault-Token: ${rootToken}" \
           --location \
           --request POST \
           --data {{ . | toJson | quote }} \
-            http://{{ template "vault.access" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/auth/{{ $key }})
+            http://{{ template "vault.name" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/auth/{{ $key }})
         {{- end }}
 
         if [ ${healthCode} -ne ${EMPTY_BODY} ]; then
@@ -109,7 +109,7 @@ Create helm partial for Vault initialization
           --location \
           --request DELETE \
           --data {{ . | toJson | quote }} \
-          https://{{ template "vault.access" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/mounts/{{ $key }} || true
+          https://{{ template "vault.name" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/mounts/{{ $key }} || true
         healthCode=$(curl --connect-timeout 1 \
           -s -o /dev/null \
           -w %{http_code} \
@@ -122,14 +122,14 @@ Create helm partial for Vault initialization
           --location \
           --request POST \
           --data {{ . | toJson | quote }} \
-          https://{{ template "vault.access" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/mounts/{{ $key }})
+          https://{{ template "vault.name" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/mounts/{{ $key }})
         {{- else }}
         curl --connect-timeout 1 \
           -s -o /dev/null \
           --header "X-Vault-Token: ${rootToken}" \
           --location \
           --request DELETE \
-            http://{{ template "vault.access" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/mounts/{{ $key }} || true
+            http://{{ template "vault.name" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/mounts/{{ $key }} || true
         healthCode=$(curl --connect-timeout 1 \
           -s -o /dev/null \
           -w %{http_code} \
@@ -137,7 +137,7 @@ Create helm partial for Vault initialization
           --location \
           --request POST \
           --data {{ . | toJson | quote }} \
-            http://{{ template "vault.access" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/mounts/{{ $key }})
+            http://{{ template "vault.name" $ }}.{{ $.Release.Namespace }}.svc.{{ $.Values.clusterDomain }}/v1/sys/mounts/{{ $key }})
         {{- end }}
 
         if [ ${healthCode} -ne ${EMPTY_BODY} ]; then
