--- a/vault/templates/headless-service.yaml
+++ b/vault/templates/headless-service.yaml
@@ -9,13 +9,20 @@ metadata:
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
 spec:
+  publishNotReadyAddresses: true
   ports:
     - name: clusterlistener
       protocol: TCP
       port: {{ .Values.vault.clusterListenerPort }}
     - name: listener
       protocol: TCP
-      port: {{ .Values.vault.listenerPort }}
+      {{- if .Values.vault.tls.enabled }}
+      port: 443
+      targetPort: {{ .Values.vault.listenerPort }}
+      {{- else }}
+      port: 80
+      targetPort: {{ .Values.vault.listenerPort }}
+      {{- end }}
   clusterIP: None
   selector:
     app: {{ template "vault.name" . }}
