--- a/vault/templates/unsealVault/_container.yaml
+++ b/vault/templates/unsealVault/_container.yaml
@@ -49,13 +49,13 @@ Create helm partial for Vault initialization
           --key-type PEM \
           --location \
           --cacert {{ .Values.vault.tls.secret.mountPath }}/{{ .Values.vault.tls.secret.caFile }} \
-            https://{{ template "vault.access" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}/v1/sys/leader)
+            https://{{ template "vault.name" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}/v1/sys/leader)
         {{- else }}
         healthCode=$(curl --connect-timeout 1 \
           -s -o /dev/null \
           -w %{http_code} \
           --location \
-            http://{{ template "vault.access" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}/v1/sys/health)
+            http://{{ template "vault.name" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}/v1/sys/health)
         {{- end }}
 
         # sleep for a 3 sec if failed
@@ -146,13 +146,13 @@ Create helm partial for Vault initialization
           --key-type PEM \
           --cacert {{ .Values.vault.tls.secret.mountPath }}/{{ .Values.vault.tls.secret.caFile }} \
           --location \
-            https://{{ template "vault.access" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}/v1/sys/health)
+            https://{{ template "vault.name" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}/v1/sys/health)
         {{- else }}
           healthCode=$(curl --connect-timeout 1 \
             -s -o /dev/null \
             -w %{http_code} \
             --location \
-              http://{{ template "vault.access" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}/v1/sys/health)
+              http://{{ template "vault.name" . }}.{{ .Release.Namespace }}.svc.{{ .Values.clusterDomain }}/v1/sys/health)
         {{- end }}
 
         # sleep for a 3 sec if failed
